# DeviceBridgeService

./: .env.example  .gitignore  README.md  devicebridgeservice.service  embodimentplan.md  requirements.txt  run.sh  start.sh
Device_Firmware/POD/firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Device_Firmware/POD/firmware/components/afe_pipeline/: CMakeLists.txt  afe_pipeline.cpp  afe_pipeline.h
Device_Firmware/POD/firmware/components/audio_bsp/: CMakeLists.txt  audio_bsp.cpp  audio_bsp.h
Device_Firmware/POD/firmware/components/avatar/: CMakeLists.txt  avatar.cpp  avatar.h
Device_Firmware/POD/firmware/main/: CMakeLists.txt  config_manager.cpp  config_manager.h  idf_component.yml  pod_config.h  pod_main.cpp
app/: auth.py  config.py  database.py  db.py  main.py  models.py  schemas.py
app/adapters/: base.py  esp.py  http_device.py  registry.py  wled.py
app/routers/: admin.py  audio.py  devices.py  embodiment.py  execute.py  groups.py  logs.py  presence.py  sessions.py
app/services/: audio_router.py  device_hub.py  embodiment_manager.py  embody_tool_sync.py  llm_mapper.py  mapping.py  presence_manager.py  runtime.py  store.py  stream_loop.py  tool_sync.py
app/static/: admin.html
docs/: API.md  ESP32_PROTOCOL.md  PLAN.md
firmware/09_DBS_Avatar_Client/: 09_DBS_Avatar_Client.ino  README.md
tests/: conftest.py  test_adapters_base.py  test_admin.py  test_app_flow.py  test_device_events.py  test_embodiment_sessions.py  test_groups.py  test_manifest_schema.py  test_mapping.py  test_stream_loop.py
(+12 files in other folders)
